--- a/testeTrabalho/src/App.css
+++ b/testeTrabalho/src/App.css
@@ -22,9 +22,34 @@
   padding: 32px;
   gap: 80px;
   justify-content: center;
-
+  overflow: hidden;
   
-.fotoGaleria{
+}
 
+.fotoGaleria{
+  height: 240px;
   width: 320px;
 }
+
+.galeria2{
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+}
+
+.itemgaleria{
+  display: flex;
+  flex-wrap: wrap;
+  padding: 32px;
+  gap: 20px;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.itemgaleria img{
+  width: 20em;
+  height: 15em;
+  object-fit: cover;
+  justify-content: space-evenly;
+}
+
